Alignment fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,15 @@
     display: block;
   }
 }
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
+
 .Loop {
   position: relative;
   height: 100%;
@@ -72,28 +73,33 @@ a {
 .mail {
   padding: 0;
 }
+
 /*
 .timing {
   vertical-align: middle;
   text-decoration: none;
   color: #ffffff;
 } */
-.btn-titl1{
+.btn-titl1 {
   padding: 0 0 0 3vw;
 }
-.btn-title{
+
+.btn-title {
   padding: 0;
 }
+
 .title-btn {
   font-size: 0.8vw;
   padding: 0.4vw;
   overflow: hidden;
 }
-.wa-img{
+
+.wa-img {
   background-color: #2DC100;
   font-size: 1.5vw;
   border-radius: 0.9vw;
 }
+
 .logo {
   width: 80%;
   margin: -20% 0 -15% 0;
@@ -102,9 +108,8 @@ a {
 .cert {
   width: 30%;
   margin: -7% auto -7% auto;
-  border-radius: 10vw ;
+  border-radius: 10vw;
 }
-
 
 .carousel-item {
   font-weight: bold;
@@ -140,15 +145,18 @@ a {
   font-size: 2vw;
   padding: 2vw;
 }
-.bridge{
+
+.bridge {
   text-align: center;
   background-color: black;
 }
-.bridge_image{
+
+.bridge_image {
   width: auto;
   max-width: 100vw;
   height: 100vh;
 }
+
 .example {
   margin-top: 0.5vw;
   padding: 1vw 2.8vw;
@@ -166,6 +174,7 @@ a {
   padding: 2vw;
   font-size: 1.5vw;
 }
+
 .example_detail h3 {
   color: yellow;
 }
@@ -187,11 +196,13 @@ a {
   color: #AF1E23;
   text-align: center;
 }
-.vision-1{
+
+.vision-1 {
   padding: 3vw 0;
 }
+
 .vision-2 {
-  padding: 4vw 0 ;
+  padding: 4vw 0;
   color: black;
 }
 
@@ -318,7 +329,7 @@ a {
 }
 
 .faqs {
-  overflow:visible;
+  overflow: visible;
   text-align: center;
   padding: 4vh 8vw;
   color: black;
@@ -333,15 +344,15 @@ a {
   font-weight: bold;
   height: 10vh;
 }
+
 /* .qNa{
   height: 72vh;
 } */
-
 .question {
   background-color: #AF1E23;
   font-size: 1.7vw;
   font-weight: bold;
-   margin: 0 0 1vw 0;
+  margin: 0 0 1vw 0;
   /* padding: 1vw;
   border: none;*/
   border-radius: 3vw 0 0 3vw;
@@ -351,10 +362,12 @@ a {
   text-align: left;
   white-space: initial;
 }
-.faq-5{
+
+.faq-5 {
   padding: 0.96vw 0 0.96vw 0.4vw;
 }
-.dd-question{
+
+.dd-question {
   width: 4%;
   border-radius: 0 3vw 3vw 0;
 }
@@ -366,11 +379,12 @@ a {
   margin: 2vw 1vw;
   padding: 1vw;
   text-decoration: none;
-
 }
-.dropdown-item{
+
+.dropdown-item {
   white-space: initial;
 }
+
 .data {
   margin: 0 6vw;
 }
@@ -379,7 +393,7 @@ a {
   font-weight: bold;
   color: #AF1E23;
   font-size: 2.4vw;
-  padding:3vh 0 ;
+  padding: 3vh 0;
 }
 
 .data-block {
@@ -402,7 +416,7 @@ a {
   border-radius: 1.8vw;
   text-shadow: 0.1vw 0.1vw 0.3vw #858585;
   font-family: Arial;
-  color: #ffffff;
+  color: black;
   font-size: 2vw;
   padding: 1vw 2vw;
   text-decoration: none;
@@ -417,7 +431,6 @@ a {
   background-image: linear-gradient(to bottom, #ffdd00, #fff200);
   text-decoration: none;
 }
-
 
 .team {
   margin: 5vh 0;
@@ -459,12 +472,14 @@ a {
   max-width: 100%;
   height: 75vh;
 }
+
 /* #mobileVideo{
   display: none;
 } */
-#carouselExampleControls{
+#carouselExampleControls {
   background-color: #af1e23;
 }
+
 .video-group {
   padding: 2vw;
 }
@@ -516,12 +531,14 @@ a {
   .card .img-wrapper {
     height: 17em;
   }
+
   .choices_image {
     /* margin:8.3vw 0 0 0; */
     padding: 0;
     border-spacing: 0;
     height: 39vh;
   }
+
   .example_detail {
     padding: 2vw 1vw 2vw 0;
     font-size: 2.8vw;
@@ -542,54 +559,64 @@ a {
   .salary {
     font-size: 3.5vw;
   }
-  .example-col-2{
+
+  .example-col-2 {
     padding: 0;
-    margin: 0 ;
+    margin: 0;
     text-align: center;
   }
-  .example-img{
+
+  .example-img {
     height: 50vh;
     width: auto;
     max-width: 100vw;
     padding: 0;
     margin: 0;
   }
+
   .hide-mobile {
     display: none;
   }
 
-  .logo{
+  .logo {
     height: 7.3vh;
     width: auto;
     margin: -40% 0 -15% 0;
   }
+
   .title-btn {
     font-size: 1.3vw;
     padding: 0.4vw;
   }
-  .top{
+
+  .top {
     font-size: 1.5vw;
   }
-  .timing{
-    font-size: 1.12vw;
-    padding:0;
 
+  .timing {
+    font-size: 1.12vw;
+    padding: 0;
   }
-  .btn-titl1{
+
+  .btn-titl1 {
     padding: 0 0 0 0.2vw;
   }
-  .bridge_image{
+
+  .bridge_image {
     width: auto;
     max-width: 100vw;
     height: 70vh;
   }
-  .vision{
+
+  .vision {
     padding: 2vh 2vw;
   }
-  .vision-1{
+
+  .vision-1 {
     padding: 0 0 1vh 0;
   }
-  .vision-2{
+
+  .vision-2 {
     padding: 0;
   }
 
@@ -627,6 +654,19 @@ a {
     font-size: 3vw;
   }
 
+  .faq-head {
+    height: auto;
+  }
+  .faqs {
+    padding: 1vh 8vw;
+
+  }
+  .ans {
+    font-size: 2vw;
+  }
+.data-1{
+  padding: 0.5vh 0;
+}
   .shead {
     font-size: 3vw;
   }
@@ -634,20 +674,25 @@ a {
   .down-head {
     font-size: 4.2vw;
   }
+
   .down-head-2 {
     font-size: 6vw;
   }
 }
-.btn-mar{
+
+.btn-mar {
   margin-bottom: 1vw;
 }
-#mobileVideo{
+
+#mobileVideo {
   display: relative;
   background-color: #AF1E23;
 }
-.video-group{
+
+.video-group {
   padding: 4vw;
 }
+
 .carousel {
   position: relative;
 }
@@ -659,10 +704,12 @@ a {
 .pic {
   width: 100%;
 }
-.cont12{
+
+.cont12 {
   height: 6vh;
   padding: 2vh 0;
 }
+
 .grey-back {
   background-color: #3A3A3A;
   color: #ffffff;
@@ -713,9 +760,9 @@ a {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}vh
+}
 
-.sticky1 {
+vh .sticky1 {
   position: fixed;
   bottom: 5%;
   left: 5%;
